added retrieval for events and activities
